Commit queue basic

--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,35 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
 plugins {
     id 'java'
+    // Spring Boot plugins
+    id 'org.springframework.boot' version '2.0.5.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
+
+
+group 'org.home'
+version '1.0-SNAPSHOT'
+
+
+
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+   // implementation('org.springframework.boot:spring-boot-starter-web:2.5.2')
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    implementation 'org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
+
+  //  implementation 'org.springframework:spring-jdbc:3.0.3.RELEASE'
+   // implementation group: 'org.springframework', name: 'spring-dao', version: '2.0.8'
 }
 
 test {
